2015-11-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/QJulia/qjulia_clu.rb: Added.

2015-11-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opencl_ext.rb: Added some symbols for APPLE extensions.
	* lib/opencl.rb (CL_STRUCT_IMAGE_FORMAT, CL_STRUCT_IMAGE_DESC): Added structs for clGetSupportedImageFormats.
	* sample/util/clu.rb: Simple wrapper.

2015-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opencl.rb (extern): A new argument 'func_addr' added. (On Windows, extern fails on some ext functions regardless of the result of 'clGetExtensionFunctionAddressForPlatform')

2015-11-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/QJulia: Added.

2015-11-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/Particle: Added.

2015-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opencl_gl_ext.rb: Added.

2015-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opencl_gl.rb: Added.

2015-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/add_numbers: Added.

2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Added.

2015-10-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* (Announce) First release.