@@ -1,6 +1,7 @@
 2015-11-21  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/QJulia/qjulia_clu.rb: Added.
+	* sample/Particle/gl_particle_animation_clu.rb: Added.
 
 2015-11-17  vaiorabbit  <http://twitter.com/vaiorabbit>
 
